--- a/germinate/index.qmd
+++ b/germinate/index.qmd
@@ -105,106 +105,146 @@ Users with the Curator role are authorized to upload data into COUSIN's Germinat
 
 
 
+::: {layout-ncol="2" layout-valign="center"}
+
+![](Figure7Filteringtemplatesamongotherdataresources1.png){width=75%}
+
+![](Figure7Filteringtemplatesamongotherdataresources2.png){width=95%}
 
 
-<!-- Conteneur pour les deux images avec titre commun -->
+
+
+:::
 <div style="text-align: center;">
-
-  <!-- Conteneur horizontal pour les images -->
-  <div style="display: flex; justify-content: center; gap: 20px; align-items: flex-start;">
-    <img src="Figure7Filteringtemplatesamongotherdataresources1.png" width="300" alt="Filtering templates - image 1"/>
-    <img src="Figure7Filteringtemplatesamongotherdataresources2.png" width="300" alt="Filtering templates - image 2"/>
-  </div>
-
-  <!-- Titre commun -->
-  <h3 style="margin-top: 4px;">Figure 7 - Filtering templates among other data resources</h3>
-
+  <p><em>Figure 7 - Filtering templates among other data resources</em></p>
 </div>
 
-
-
-
-
-<img src="Figure7Filteringtemplatesamongotherdataresources1.png" width="300"/>
-<img src="Figure7Filteringtemplatesamongotherdataresources2.png" width="300"/>
-
 In the next sections the template files you downloaded will be explained and what kind of information you will provide as well.
+---
 
 ### 2.2	Ex situ Passport data template 
 
 The purpose of this template is to record the passport data of ex situ accessions based on the Multi-Crop Passport Descriptor (MCPD) format. A separate template will soon be available for in situ material.
 
 The template has been adapted for the COUSIN project. For compatibility reasons with the underlying Germinate system, there are a number of additional fields for which default values have already been entered.
+
 •	Open the Excel template file you downloaded called **germplasm-mcpd-ex-situ.xlsx**
+
+---
 
 #### 2.2.1	Metadata Sheet
 
 Open the METADATA sheet. The Metadata sheet <u>will appear in all importation files</u>, not only in the germplasm importation template. You will see three columns: Label (column A), Definition (column B), and Value (column C). The Label and Definition columns are pre-filled, and your task is to enter information into the Value column based on the descriptions.
 
+
+---
+
 ##### 2.2.1.1	Title 
 
 On cell label "Title" (`A2`), enter a distinct name for your data resource in the corresponding value cell (`C2`). This should be an official or widely recognized name that identifies the dataset. For example, you might enter “FSI collection”. **The title is mandatory**.
+
+---
 
 ##### 2.2.1.2	Description
 
 On cell label "Description" (`A3`), provide a summary or overview of what the resource contains in the value cell (`C3`). This can include abstracts, outlines, or free-text explanations describing the scope of the data. For instance, “Passport Data of Pea Accessions.” **The description is mandatory**.
 
+---
+
 ##### 2.2.1.3	Rights
 
 On cell label "Rights" (`A4`), specify statements about ownership, usage permissions, or licensing in value cell (`C4`). An example entry would be “Creative Commons Attribution `4.0` International Public License  ”. Below a list of platform suggestion of licenses (there is support for custom licenses too)
+
 •	Creative Commons Attribution `4.0` International Public License
+
 •	Creative Commons Attribution-ShareAlike `4.0` International Public License
+
 •	Creative Commons Attribution-NoDerivatives `4.0` International Public License
+
 •	Creative Commons Attribution-NonCommercial `4.0` International Public License
+
 •	Creative Commons Attribution-NonCommercial-ShareAlike `4.0` International Public License
+
 •	Creative Commons Attribution-NonCommercial-NoDerivatives `4.0 `Intern. Public License
+
+---
 
 ##### 2.2.1.4	Date of Creation
 On cell label "Date of creation" (`A5`), inform the date or time span when the file was created or made available in value cell (`C5`). Use standardized date formatting such as `ISO 8601 (YYYY-MM-DD)`. For example, `“2023-11-15”`.
+
+---
 
 ##### 2.2.1.5	Publisher
 
 On cell label "Publisher" (`A6`), enter the name(s) of the person, organization, or entity responsible for distributing the dataset in value cell (`C6`). This may include contributors or institutions. For example, “Rodriguez-Mena, Sara; Rubiales, Diego; Consejo Superior de Investigaciones Científicas (CSIC Digital)”.
 
+
+---
+
+
 ##### 2.2.1.6	Format
 
 On cell label "Format" (`A7`), describe the data’s file type or physical medium in value cell (`C7`). Use standard terms or MIME types if possible. Default, “application/vnd.openxmlformats-officedocument.spreadsheetml.sheet”.   This default MIME type is a representation of value for Excel files.
 
+---
+
 ##### 2.2.1.7	Language
 
 On cell label "Language" (`A8`), enter the language used in the dataset or documentation in value cell (`C8`), preferably with internationally recognized codes. Default, “ENG”.  All expected project data must be informed in English. **This entry shouldn’t be changed**.
+
+---
 
 ##### 2.2.1.8	Source
 On cell label "Source" (`A9`), provide reference to any original or related resources from which this dataset is derived in value cell (`C9`). Include URLs or identifiers if applicable. Example: 
 
 [https://www.mdpi.com/article/10.3390/plants13172454/s1”](https://www.mdpi.com/article/10.3390/plants13172454/s1”.).
 
+
+---
+
 ##### 2.2.1.9	Type
 On cell label "Type" (`A10`), specify the general category or genre of the resource in value cell (`C10`), such as dataset, report, or image. Default entry: “Dataset”.
+
+---
 
 ##### 2.2.1.10	Subject
 On cell label "Subject" (`A11`), enter key topics or themes represented in the data using relevant keywords or classification terms in value cell (`C11`). For example, “Pea, Accessions”.
 
+---
+
 ##### 2.2.1.11	Contact
 On cell label "Contact" (`A12`), provide contact information for the individual responsible for answering questions related to the dataset in value cell (`C12`). For example, “Diego Rubiales, [diego@email.org](diego@email.org)”.
+
+---
 
 ##### 2.2.1.12	Investigation Title
 On cell label "Investigation Title" (`A13`), write a concise, human-readable title summarizing the broader research associated with this data in value cell (`C13`). For example, “Passport Data of Pea Accessions”.
 
+---
+
 ##### 2.2.1.13	Investigation Description
 On cell label "Investigation Description" (`A14`), provide a more detailed narrative explaining research aims, methods, or context in value cell (`C14`). Example: “Passport Data of Pea Accessions following MCPD standards.”
+
+---
 
 ##### 2.2.1.14	Investigation unique ID
 On cell label "Investigation unique ID" (`A15`), input a unique code identifying this investigation, system-generated or institution-assigned, in value cell (`C15`). Leave it blank the database will assign an identification.
 
+---
+
+
 ##### 2.2.1.15	Associated data file link
 On cell label "Associated data file link" (`A16`), enter a URL or persistent identifier linking directly to the dataset or digital object in value cell (`C16`). An example entry is [“https://doi.org/10.3390/plants13172454”](“https://doi.org/10.3390/plants13172454”). Default: empty.
+
+---
 
 ##### 2.2.1.16	Associated data file description
 On cell label "Associated data file description" (`A17`), describe the structure, format, or organization of the linked data file in value cell (`C17`). For instance, “Comma-separated values file containing phenotypic measurements”. Default: empty.
 
+---
+
 ##### 2.2.1.17	Description
-On cell label "Associated data file version" (A18), inform a version number or identifier signaling the current iteration or release of the dataset in the corresponding value cell (C18), for example “1.0”. Default: empty.
+On cell label "Associated data file version" (`A18`), inform a version number or identifier signaling the current iteration or release of the dataset in the corresponding value cell (`C18`), for example “`1.0`”. Default: empty.
 
 <figure style="text-align:center;">
   <img src="Figure 8 - Overview of Metadata sheet.png" width="500"/>
@@ -214,152 +254,213 @@ On cell label "Associated data file version" (A18), inform a version number or i
 #### 2.2.2	MCPD DATA Sheet
 •	Open the Data sheet of your Excel file.
 
+---
+
 ##### 2.2.2.1	PUID
 
 A permanent unique identifier for the unambiguous identification of an accession in a plant genetic resource collection. Only DOIs are supported. If no DOI has been assigned to the accession in question, this field must remain empty.  
 **Example value:**  (empty in this dataset, e.g., `" 10.25642/IPK/GBIS/1420710"`)
 
+---
+
 ##### 2.2.2.2	INSTCODE
 FAO WIEWS code denoting the institution where the accession is held, comprising a three-letter country code and a number. Mandatory.    
 **Example value:**  `USA022`, `GBR247`, `ESP004`
+
+---
 
 ##### 2.2.2.3	ACCENUMB
 
 Unique accession number assigned within the genebank when the sample is entered into the collection. Mandatory.  
 **Example value:**  `PI 109865`, `PI 117910`, `JI0085`
 
+---
+
 ##### 2.2.2.4	COLLNUMB
 
 Original code or number assigned to the sample by collectors, often including collector initials and numbers.  
 **Example value:**  `110_1`, `2629`, `FM9909`
+
+---
 
 ##### 2.2.2.5	COLLCODE
 
 FAO WIEWS code of the institute that collected the sample. If the holding institute collected it, this matches INSTCODE.  
 **Example value:**  `ESP004`, `PRT005`, `USA022`
 
+---
+
 ##### 2.2.2.6	COLLNAME
 
 Name of the collecting institute; used if COLLCODE is unavailable.  
 **Example value:** "International Center for Agricultural Research", "Local Agricultural Institute"
 
+---
+
 ##### 2.2.2.7	COLLINSTADDRESS
 
 Address of the collecting institute, provided when the FAO WIEWS code is missing.  
-**Example value:**  "Km 17 Autopista Duarte, Santo Domingo, Dominican Republic"
+**Example value:**  "`Km 17` Autopista Duarte, Santo Domingo, Dominican Republic"
 
 ##### 2.2.2.8	COLLMISSID
 
 Code for the collecting mission, e.g., specific expedition or project identifier.  
 **Example value:**  `E002`, `CIATFOR-052`
 
+---
+
 ##### 2.2.2.9	GENUS
 
 Genus name of the accession’s taxon, capitalized. Mandatory.  
 **Example value:**  Pisum
+
+---
 
 ##### 2.2.2.10	SPECIES
 
 Species epithet in lowercase or abbreviation ‘sp.’  
 **Example value:**  sativum, fulvum, abyssinicum
 
+
+---
+
 ##### 2.2.2.11	SPAUTHOR
 
 Authority for the species name.  
 **Example value:**  L., Sm., M. Bieb.
+
+---
 
 ##### 2.2.2.12	SUBTAXA
 
 Additional taxonomic classification such as subspecies or variety.  
 **Example value:**  subsp. arvense, subsp. jomardii, var. abyssinicum
 
+---
+
 ##### 2.2.2.13	SUBTAUTHOR
 
 Authority name associated with the subtaxon.  
 **Example value:**  Govorov, L.
+
+---
 
 ##### 2.2.2.14	CROPNAME
 
 Common crop name.  
 **Example value:**  Pea
 
+---
+
 ##### 2.2.2.15	ACCENAME
 Registered or given name of the accession distinct from donor or collecting numbers, such as variety name or landrace name.  
-**Example value:**  ARVEJAS AMARILLAS, CPI 135298, P.SATIVUM-ALBANIA
+**Example value:**  ARVEJAS AMARILLAS, `CPI 135298`, P.SATIVUM-ALBANIA
+
+---
 
 ##### 2.2.2.16	ACQDATE
-Date accession was added to the collection, formatted YYYYMMDD. Missing days and months can be replaced with zeros or hyphens.  
+Date accession was added to the collection, formatted `YYYYMMDD`. Missing days and months can be replaced with zeros or hyphens.    
+**Example value:**  `19350123`, `19810801`, `19780700`, `1975----`
 
-**Example value:**  19350123, 19810801, 19780700, 1975----
+---
 
 ##### 2.2.2.17	ORIGCTY
 
 Three-letter ISO country code denoting the accession’s country of origin. Please only use this field for material collected or bred in a certain country. Don’t use it to indicate the country a germplasm collection is located at.  
-**Example value:**  VEN, IRN, ESP, TUR, USA
+**Example value:**  `VEN`, `IRN`, `ESP`, `TUR`, `USA`
 
+---
 
 ##### 2.2.2.18	COLLSITE
 
 Sub-national location details describing where the accession was collected.  
 **Example value:**  Caracas, Tehran, Asturias; Asturias; Lena; Llanos de Someron
 
+---
+
 ##### 2.2.2.19	DECLATITUDE
 
 Latitude coordinates in decimal degrees; positive north, negative south.  
-**Example value:**  10.4943, 35.6892, -34.6037, 48.14
+**Example value:**  `10.4943`, `35.6892`, `-34.6037`, `48.14`
+
+---
 
 ##### 2.2.2.20	LATITUDE
 
-Latitude coordinates in degrees, minutes, seconds (DMS) format. Degrees (2 digits) minutes (2 digits), and seconds (2 digits) followed by N (North) or S (South) (e.g. 103020S). Every missing digit (minutes or seconds) should be indicated with a hyphen. Leading zeros are required (e.g. 10----S; 011530N; 4531--S). 
+Latitude coordinates in degrees, minutes, seconds (DMS) format. Degrees (2 digits) minutes (2 digits), and seconds (2 digits) followed by N (North) or S (South) (e.g. `103020S`). Every missing digit (minutes or seconds) should be indicated with a hyphen. Leading zeros are required (e.g. `10----S`; `011530N`; `4531--S`). 
+
+
+---
+
 
 ##### 2.2.2.21	DECLONGITUDE
 
 Longitude in decimal degrees; positive east, negative west.  
-**Example value:**  -66.9029, 51.389, -58.3816
+**Example value:**  `-66.9029`, `51.389`, `-58.3816`
+
+---
 
 ##### 2.2.2.22	LONGITUDE
 
-Longitude in DMS format. Degrees (3 digits), minutes (2 digits), and seconds (2 digits) followed by E (East) or W (West) (e.g. 0762510W). Every missing digit (minutes or seconds) should be indicated with a hyphen. Leading zeros are required (e.g. 076----W). 
+Longitude in DMS format. Degrees (3 digits), minutes (2 digits), and seconds (2 digits) followed by E (East) or W (West) (e.g. 0762510W). Every missing digit (minutes or seconds) should be indicated with a hyphen. Leading zeros are required (e.g. `076----W`). 
+
+---
+
 
 ##### 2.2.2.23	COORDUNCERT
 
 Estimated uncertainty of the coordinates in meters. Leave blank if unknown.  
-**Example value:**  (blank) / 50 / 100
+**Example value:**  `(blank)` / `50` / `100`
+
+---
+
 
 ##### 2.2.2.24	COORDDATUM
 
 Datum or spatial reference system of the geographic coordinates.  
-**Example value:**  WGS84, NAD83
+**Example value:**  `WGS84`, `NAD83`
+
+---
 
 ##### 2.2.2.25	GEOREFMETH
 
 Method used to determine coordinates (GPS, map estimation, gazetteer, etc.).    
 **Example value:**  GPS, gazetteer, estimated from map
 
+---
+
 ##### 2.2.2.26	ELEVATION
 
 Height above sea level of the collection site in meters; negative allowed.  
-**Example value:**  865, 161, 526, -15
+**Example value:**  `865`, `161`, `526`, `-15`
+
+---
 
 ##### 2.2.2.27	COLLDATE
 
 Date sample was collected, formatted as YYYYMMDD.  
-**Example value:**  19780700, 19810801, 19350123
+**Example value:**  `19780700`, `19810801`, `19350123`
+
+---
 
 ##### 2.2.2.28	BREDCODE
 
 Code of breeding institute that developed accession, if applicable.  
-**Example value:**  ESP040, PRT005
+**Example value:**  `ESP040`, `PRT005`
+
+---
 
 ##### 2.2.2.29	BREDNAME
 
 Name of breeding institute or breeder in case that no FAO WIEWS code is available.    
 **Example value:**  "Fox, K.", "Dolan, D.D."
 
+---
+
 ##### 2.2.2.30	SAMPSTAT
 
 Biological status code indicating accession type (wild, landrace, breeding material, etc.).    
-**Example value:**  300 (traditional cultivar). Below there is a list of accepted CODE values:
+**Example value:**  `300` (traditional cultivar). Below there is a list of accepted CODE values:
 
 
 | Code | Description |
@@ -450,6 +551,8 @@ Accession number assigned by the donor.
 
 Any other identifiers known to exist in other collections for this accession. Format :
 INSTCODE:ACCENUMB;INSTCODE:identifier; INSTCODE and identifier are separated by a colon without space. Pairs of INSTCODE and identifier are separated by a semicolon without space. When the institute is not known, the identifier should be preceded by a colon.
+
+---
 
 ##### 2.2.2.37 DUPLSITE
 
@@ -633,7 +736,7 @@ Indicates whether the trait is part of a timeseries dataset to be shown on Germi
   <p><em>Figure 10 - Additional attributes of germplasm</em></p>
 </div>
 
----
+
 #### 2.3.4	Trials Data Sheet
 
 <div align="center">
@@ -644,167 +747,239 @@ Indicates whether the trait is part of a timeseries dataset to be shown on Germi
 •	This sheet contains information about the observed trials data. The dynamic content columns start by column K, that means the trials variables from sheet Phenotypes should be listed from column K and then. 
 •	The most important on this sheet is the usage of accession numbers  of registered material (germplasm) on MCPD passport data (column Line/Phenotype).
 
+---
 
 ##### 2.3.4.1	LINE/PHENOTYPE
 
 The identifier or name of the genetic line or phenotype under study. Must be an accession number referenced on database/MCPD uploaded data. Mandatory column. (Column A).    
 **Example value:**  `PI 204305` 
 
+---
+
 ##### 2.3.4.2	REP
 
 The replicate number indicating the repetition of the experimental unit (Column B).    
 **Example value:**  `1`
+
+---
 
 ##### 2.3.4.3	BLOCK
 
 The block number in which the experimental unit is placed (Column C).    
 **Example value:**  `2` 
 
+---
 ##### 2.3.4.4	ROW
 
 The row number of the experimental unit within the block or field layout (Column D).    
 **Example value:**  `5`  
+
+---
 
 ##### 2.3.4.5	COLUMN
 
 The column number of the experimental unit within the block or field layout (Column E).    
 **Example value:**  `3`  
 
+---
+
 ##### 2.3.4.6	TREATMENT
 
 The experimental or specific treatment assigned to this unit (Column F).  This column represent a previous conception of trait data with fixed column refering the treatment. This column should be leave empty.
+
+---
 
 ##### 2.3.4.7	LOCATION
 
 The name or description of the location where the experiment is conducted (Column G). This information is only needed if more than one sites/location was used in the experiment, otherwise just use the sheet Location.  
 **Example value:**  `Field Station 01`
 
+---
+
 ##### 2.3.4.8	LATITUDE
 
 The geographic coordinate specifying the north-south position of the experimental location (Column H).  Like location is only needed if more than one sites/location was used in the experiment, otherwise just use the sheet Location.  
 **Example value:**  `45.123456` 
+
+---
 
 ##### 2.3.4.9	LONGITUDE
 
 The geographic coordinate specifying the east-west position of the experimental location (Column I).  Like location is only needed if more than one sites/location was used in the experiment, otherwise just use the sheet Location.  
 **Example value:**  `-120.654321`  
 
+---
+
 ##### 2.3.4.10	ELEVATION
 
 The height above sea level of the experimental location, typically in meters (Column J).  Like location is only needed if more than one sites/location was used in the experiment, otherwise just use the sheet Location.  
 **Example value:**  `250`  
+
+---
 
 ##### 2.3.4.11	EXPERIMENT ID (FIRST COLUMN  WITH TRAIT VARIABLES AND VALUES) …
 
 Variable: A numeric identifier referring to the specific experiment (Column K).  From column K and beyond you will enter your variables and respective values. The variables must be the same stated on Phenotype sheet.  
 **Example value:**  `EXP_21`  
 
+
+---
+
+
 #### 2.3.5	Recording Dates Sheet
 
 •	This sheet can still blank. In this stage of the project we choose not use the records of observed dates of variables individually on this sheet. The idea is to have the observed dates directly as variables on data sheet and avoid duplication of information. 
 
+
+---
+
+
 #### 2.3.6	Attributes Sheet  
 
 •	This sheet contains information about the trial as a whole. This information is customizable and will set the data for all entries observed. Example: During the trials there was daily irrigation at 8am independent of the other trials measured or a specific treatment.
+
+---
 
 ##### 2.3.6.1	ATTRIBUTE
 
 The name or label of the specific characteristic or feature being described (Column A).  
 **Example value:**  Irrigation
 
+
+---
+
 ##### 2.3.6.2	TYPE
 
 The data type describing the kind of information the attribute holds, such as text, numeric, or categorical (Column B).  
 **Example value:**  text
+
+---
 
 ##### 2.3.6.3	VALUE
 
 The content or measurement corresponding to the attribute, providing the specific details or data (Column C).  
 **Example value:**  Daily irrigation at `8am`, `200ml` per square metre
 
+---
+
 #### 2.3.7	Collaborators Sheet
 
 •	This sheet contains information about the owners/creators of the dataset/experiment and all collaborators references.
+
+---
 
 ##### 2.3.7.1	LAST NAME
 
 Last name (surname) of the author(s), researcher(s), scientist(s), or student(s) responsible for producing the information product (Column A).    
 **Example value:**  Rubiales  
 
+---
+
 ##### 2.3.7.2	FIRST NAME
 
 First name (and middle name if available) of the author(s), researcher(s), scientist(s), or student(s) responsible for producing the information product (Column B).    
 **Example value:**  Diego 
+
+---
 
 ##### 2.3.7.3	CONTRIBUTOR ROLE
 
 Type of contribution of the person to the investigation (e.g., data submitter, author, corresponding author) (Column C).   
 **Example value:**  Author  
 
+---
+
 ##### 2.3.7.4	CONTRIBUTOR ID
 
 An identifier for the data submitter. If the submitter is an individual, ORCID identifiers are recommended (Column D).  
 **Example value:**  `0000-0001-9644-8616`
+
+---
 
 ##### 2.3.7.5	EMAIL
 
 E-mail address of the author(s), researcher(s), scientist(s), or student(s) responsible for producing the information product (Column E).  
 **Example value:** diego.rubiales@...
 
+---
+
 ##### 2.3.7.6	PHONE
 
 Phone number of the author(s), researcher(s), scientist(s), or student(s) responsible for producing the information product (Column F).   
 **Example value:**  `+34-555-123-456`  
+
+---
 
 ##### 2.3.7.7	CONTRIBUTOR (INSTITUTION)
 
 Author's affiliation when the resource was created (Column G).   
 **Example value:**  Institute for Sustainable Agriculture (CSIC)  
 
+
+---
+
 ##### 2.3.7.8	ADDRESS
 
 Address of the institution of affiliation when the resource was created (Column H).   
-**Example value:**  Avenida Alcalde Conde Mayalde, `14004` Córdoba  
+**Example value:**  Avenida Alcalde Conde Mayalde, `14004` Córdoba 
+
+---
 
 ##### 2.3.7.9	COUNTRY
 
 The two-letter country code of the institution (`ISO 3166-1 alpha-2`) (Column I).    
 **Example value:**  ES
 
+---
+
 #### 2.3.8	Location Sheet
 
 •	This sheet has the information about the location where the experiment occurred. This information is mandatory (Location name), but just if only one location is recorded. If the trials experiment belongs to more than one site/place this information should be informed on separate importation files for each location. 
+
+---
 
 ##### 2.3.8.1	NAME
 
 This is the full name or identifier of the location or site (Column A).    
 **Example value:**  Balruddery Farm
 
+---
+
 ##### 2.3.8.2	SHORT NAME
 
 A shorter or abbreviated name for the location or site (Column B).    
 **Example value:** Balruddery
+
+---
 
 ##### 2.3.8.3	COUNTRY
 
 The two-letter country code representing the country where the location is situated (Column C).  
 **Example value:**  GB
 
+---
+
 ##### 2.3.8.4	ELEVATION
 
 The height above sea level of the location, typically measured in meters (Column D).  
 **Example value:**  `110`
+
+---
 
 ##### 2.3.8.5	LATITUDE
 
 The north-south geographic coordinate of the location, given in decimal degrees (Column E).  
 **Example value:**  `56.481156`
 
+---
+
 ##### 2.3.8.6	LONGITUDE
 
 The east-west geographic coordinate of the location, given in decimal degrees (Column F).
 
 **Example value:** `-3.1279887`                                                                
+
+---
 
 ### 2.4	Environmental (Climate) Importation Template 
 
@@ -826,60 +1001,86 @@ The purpose of this template is to record environmental data capturing specific 
 
 •	Like the traits variables, here you will set the environmental variables. This information belongs to the location. While the traits are related to the accessions, the environment (climate) variables are linked to the location.
 
+---
+
 ##### 2.4.2.1	NAME
 
 This is the full name or identifier of the environment variable used in the experiment. It typically uniquely identifies each enviroment variable (Column A).    
 **Example value:**  Longterm Mean of Temperature
+
+---
 
 ##### 2.4.2.2	SHORT NAME
 
 A shorter or abbreviated name for the environment variable, useful for compact display or referencing (Column B).   
 **Example value:** long_mean_temp  
 
+---
+
 ##### 2.4.2.3	DESCRIPTION
 
 A detailed explanation of what the environmental variable represents or measures in the experiment (Column C).    
 **Example value:**  Average temperature over multiple years at the location.
+
+---
 
 ##### 2.4.2.4	DATA TYPE
 
 The type of data the phenotype    variable holds, such as date, numeric or categorical – domain like (Column D).  
 **Example value:**  numeric 
 
+---
+
 ##### 2.4.2.5	UNIT NAME
 
 The full name of the unit of measurement for the variable, if applicable. (Column E).  
 **Example value:**  Celsius
+
+---
 
 ##### 2.4.2.6	UNIT ABBREVIATION
 
 The abbreviated symbol for the measurement unit, if applicable (Column F).  
 **Example value:**  oC 
 
+---
+
 ##### 2.4.2.7	UNIT DESCRIPTIONS
 
 Additional information or clarifications about the units used (Column G).    
 **Example value:**  Temperature in Celsius. 
 
+---
+
 #### 2.4.3	Environmental (Climate) Data Sheet
 
 •	For the environmental (climate) data you will need to attach the variables to the location and a date of observation (column A and B respectively). From column C and beyond you should enter your variables.
+
+---
 
 ##### 2.4.3.1	LOCATION/CLIMATE
 
 The identifier or name of the location of the study.   (Column A)  
 **Example value:** Balruddery
 
+---
+
 ##### 2.4.3.2	DATE
 
 Date the environmental variable was observed, formatted YYYYMMDD (Column B).    
 **Example value:**  `1`  
 
+---
+
 #### 2.4.4	Attributes Sheet
 This sheet contains information about the environment(location) as a whole. This information is customizable and will set the data for all entries observed. Same approach as Trials attribute sheet.
 
+---
+
 #### 2.4.5	Location Sheet
 This sheet has the information about the location where the experiment occurred. This information is mandatory (Location name). Same approach as Trials attribute sheet.
+
+---
 
 ## 3	Uploading Process
 
@@ -900,20 +1101,27 @@ This sheet has the information about the location where the experiment occurred.
 
 
 
-### 3.2	 The Download/Upload Asynchronous Bar 
+ 
 
 
 <div style="display: flex; align-items: flex-start; gap: 20px;">
 
   <!-- Image avec légende -->
   <figure style="margin: 0; text-align: center;">
-    <img src="3.2	 The Download/Upload Asynchronous Bar " width="300"/>
-    <figcaption style="font-size: small;">3.2	 The Download/Upload Asynchronous Bar </figcaption>
+    <img src="Figure 14 - Asynchronous bar view.png" width="300"/>
+    <figcaption style="font-size: small;">Figure 14 - Asynchronous bar view.png</figcaption>
   </figure>
 
   <!-- Texte à côté -->
-  <div>ertain importations using Germinate might require a few minutes to complete, especially since some datasets contain millions of genetic markers and hundreds of thousands of germplasm entries. The asynchronous downloads/uploads, allows you to submit a data request and continue using the platform while the query processes. Once the data is prepared, the interface will notify you eliminating the need to wait idly. You will be familiarized with this side bar since all information about the upload of data will be shown here.
+  <div>
+### 3.2	 The Download/Upload Asynchronous Bar
+Certain importations using Germinate might require a few minutes to complete, especially since some datasets contain millions of genetic markers and hundreds of thousands of germplasm entries. The asynchronous downloads/uploads, allows you to submit a data request and continue using the platform while the query processes. Once the data is prepared, the interface will notify you eliminating the need to wait idly. You will be familiarized with this side bar since all information about the upload of data will be shown here.
   </div>
+
+
+</div>
+
+
 
 
 ### 3.3	Ex situ Passport Data Upload 
@@ -921,6 +1129,7 @@ This sheet has the information about the location where the experiment occurred.
 The very first data upload will be the information about the material you used on your experiments. The germplasm information follows the Multi-Crop Passport Descriptors (MCPD). 
   
 •	On uploader page click the MCPD box (Fig. 12).
+
 •	In the bottom of the page an input file element will be available. Select your germplasm data importation file and click on Upload and Check button.
 
 
@@ -930,34 +1139,40 @@ The very first data upload will be the information about the material you used o
 </div>
 
 •	You will notice that you have a selection button to choose between insert new data (default) or in case you need to update information about any germplasm, and knowing the former accession number, you can pick the update option.
+
 •	Click on Upload and Check.
 
 #### 3.3.1	Got an error?
-
 
 <div style="display: flex; align-items: flex-start; gap: 20px;">
 
   <!-- Image avec légende -->
   <figure style="margin: 0; text-align: center;">
-    <img src="3.2	 The Download/Upload Asynchronous Bar " width="300"/>
-    <figcaption style="font-size: small;">3.2	 The Download/Upload Asynchronous Bar </figcaption>
+    <img src="Figure 16 - upload status on asynchronous box.png" width="300"/>
+    <figcaption style="font-size: small;">Figure 16 - upload status on asynchronous box</figcaption>
   </figure>
 
   <!-- Texte à côté -->
   <div>
- 	After uploading your data, the asynchronous box will display the processing status. If an error occurs during the upload, an error message will appear in this box,(View Feedback) informing you that there is an issue with the submitted data. 
+ After uploading your data, the asynchronous box will display the processing status. If an error occurs during the upload, an error message will appear in this box,(View Feedback) informing you that there is an issue with the submitted data. 
 
-You can review the details provided to identify which parts of the template contain incorrect or missing information. This allows you to quickly pinpoint and correct the errors before attempting to upload the data again. If any help is needed you can contact the WP5 team and send the error report (fig. 15) to allow our analyzes. 
+ You can review the details provided to identify which parts of the template contain incorrect or missing information. This allows you to quickly pinpoint and correct the errors before attempting to upload the data again. If any help is needed you can contact the WP5 team and send the error report (fig. 15) to allow our analyzes. 
 
   </div>
 
 
-
-<div align="center">
-  <img src="Figure 17 - Error report visualization.png" alt="Figure 17 - Error report visualization" width="500"/>
-  <p><em>Figure 17 - Error report visualization</em></p>
 </div>
 
+
+
+
+
+<br>
+
+<div align="center">
+  <img src="Figure 17 - Error report visualization.png" alt="Figure 17 - Error report visualization.png" width="500"/>
+  <p><em>Figure 17 - Error report visualization</em></p>
+</div>
 
 ### 3.4	Trials/Climate Data Upload
 
