--- a/germinate/index.qmd
+++ b/germinate/index.qmd
@@ -18,6 +18,7 @@ title: "Germinate Data Importation User Guide"
 ## 1. Before you start
 Our goal with this manual is to help you understand how to prepare and import your experimental data effectively enabling your research outputs to be accessible and integrated within the COUSIN stakeholders via Germinate.
 This guide does not cover all features of Germinate. Instead, it provides step-by-step instructions tailored to ensure you can successfully complete the official project’s upload templates with your COUSIN-related datasets and then make it available to the Germinate audience.
+
 Before you start, we expect that you are already familiar with concept of Germinate platform and its general purpose regarding COUSIN project targets. 
 
 ::: {.callout-tip}
@@ -122,15 +123,13 @@ Users with the Curator role are authorized to upload data into COUSIN's Germinat
 <div style="text-align: center;">
   <p><em>Figure 7 - Filtering templates among other data resources</em></p>
 </div>
-
 In the next sections the template files you downloaded will be explained and what kind of information you will provide as well.
+
 ---
 
 ### 2.2	Ex situ Passport data template 
 
-The purpose of this template is to record the passport data of ex situ accessions based on the Multi-Crop Passport Descriptor (MCPD) format. A separate template will soon be available for in situ material.
-
-The template has been adapted for the COUSIN project. For compatibility reasons with the underlying Germinate system, there are a number of additional fields for which default values have already been entered.
+The purpose of this template is to record the passport data of ex situ accessions based on the Multi-Crop Passport Descriptor (MCPD) format. A separate template will soon be available for in situ material. The template has been adapted for the COUSIN project. For compatibility reasons with the underlying Germinate system, there are a number of additional fields for which default values have already been entered.
 
 •	Open the Excel template file you downloaded called **germplasm-mcpd-ex-situ.xlsx**
 
