--- a/germinate/index.qmd
+++ b/germinate/index.qmd
@@ -22,7 +22,7 @@ This guide does not cover all features of Germinate. Instead, it provides step-b
 Before you start, we expect that you are already familiar with concept of Germinate platform and its general purpose regarding COUSIN project targets. 
 
 ::: {.callout-tip}
-If you are interested in a fully training on Germinate, an official training resource is available here: [https://germinateplatform.github.io/germinate-training/](https://germinateplatform.github.io/germinate-training/)
+If you are interested in a fully training on Germinate, an official training resource is available <a href="https://germinateplatform.github.io/germinate-training/" target="_blank" rel="noopener noreferrer">here</a>.
 :::
 
 ## 2.	Template Files
